# balboa_raspberry_learning

./: .gitignore  Cargo.toml  Cross.toml  balboa.xml  balboa_delay.xml  flake.nix  shell.nix
src/: file_utils.rs  graphic_utils.rs  logging_utils.rs  main.rs
src/batch_analisys/: mod.rs  single_batch_analisys.rs
src/learning/: lstdq.rs  lstdq_2019.rs  lstdq_no_bias_correction.rs  mod.rs
src/robot_comunication/: i2c_comunication.rs  i2c_comunication_external_controller.rs  mod.rs  serial_comunication.rs
src/sim/: linear_sim.rs  mod.rs  mujoco_sim.rs
src/utils/: graphic_utils.rs  mod.rs
